<resources>
    <string name="app_name">start_android</string>
    <string name="textView_1">Android</string>
    <string name="textView_2">Java</string>
    <string name="button_change">Поменять</string>
    <string name="dz1">Dz1</string>
    <string name="dz2">Dz2</string>
    <string name="dz3">Dz3</string>
    <string name="load">Load</string>
    <string name="link">http://</string>
    <string name="username">Username</string>
    <string name="forgot_your_username_password"><u>Forgot your username/password?</u></string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="dz4">Dz4</string>
    <string name="dz5">Dz5</string>
    <string name="dz6">DZ6</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="dz9">DZ9</string>
</resources>
